[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.2"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.12.1", features = ["derive"] }
futures-intrusive = "0.4.0"
ocpalm = { path = "../ocpalm" }
byte-slice-cast = "1.2.1"